Completed four practice JS problems.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ practice.html
 /js_book-practice.html
 book_HTML_CSS.html
 /css/book_css_stylesheet.css
+/bootstrap_practice.html
+/css/style2.css
+/codeupprojectpractice.html
